[package]
name = "permissions"
version = "0.1.1"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2018"
description = "Library to query for file permissions (`rwx` and removal)."

categories = ["api-bindings", "filesystem", "os"]
keywords = ["permission", "file", "filesystem"]

repository = "https://github.com/marcospb19/permissions"
license = "MIT"

[dependencies]
libc = "0.2"
bitflags = "1.2"
