[package]
name = "permissions"
version = "0.2.1"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
description = "Library to query for file permissions (read, write, execute, and removal)."

categories = ["api-bindings", "filesystem", "os"]
keywords = ["permission", "file", "filesystem"]

repository = "https://github.com/marcospb19/permissions"
license = "MIT"

[dependencies]
libc = "0.2"
# bitflags = "1.2" # For next features
