[package]
name = "permissions"
version = "0.4.1"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
description = "Library to query for file permissions (read, write, execute, removal and creation)."

categories = ["api-bindings", "filesystem"]
keywords = ["permission", "file", "filesystem"]

repository = "https://github.com/marcospb19/permissions"
license = "MIT"

[dependencies]
libc = "0.2"
